<resources>
    <string name="app_name">POS V 0.0.5</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string-array name="planets_array">
        <item>(Select currency)</item>
        <item>SDG</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="oprators_topup_array">
        <item>(Select operator)</item>
        <item>Zain</item>
        <item>MTN</item>
        <item>Sudani</item>
    </string-array>
    <string-array name="oprators_billpayemnt_array">
        <item>(Select operator)</item>
        <item>Zain</item>
        <item>MTN</item>
        <item>Sudani</item>
    </string-array>
    <string-array name="acadmin_array">
        <item>(Select Form Kind)</item>
        <item>   General admission-first round</item>
        <item> Special admission</item>
        <item>   Sons of higher education staff</item>
        <item> General admission-second round</item>
        <item>  Special admission-vacant seats</item>
        <item>  Private institutions direct admission</item>
        <item> Diploma in public institutions</item>

    </string-array>
    <string-array name="services_array">
        <item>(Select Service)</item>
        <item>    purchase</item>
        <item>   Purchase With Cash Back</item>
        <item>   Balance Inquiry</item>
        <item>   Mini Statement</item>
        <item>   Bill Payment</item>
        <item>   Bill Prepayment</item>
        <item> Account Transfer</item>
        <item> Card Transfer</item>
        <item> Cash-in</item>
        <item> Refund</item>
        <item> Generate Voucher</item>
        <item> Cash-out Voucher</item>
        <item> Bill Inquiry</item>
        <item> Cash out</item>
        <item> Request eGovernment service</item>
        <item> Purchase Mobile</item>
    </string-array>
    <string-array name="course_array">
        <item>(Select Course)</item>
        <item>Academic</item>
        <item>Agricultural</item>
        <item>commercial</item>
        <item>Industrial</item>
        <item>Womanly</item>
        <item>Ahlia</item>
        <item>Readings</item>
    </string-array>
    <string name="please_wait">Please Wait</string>
    <string name="Transaction_amount">Transaction Amount</string>
    <string name="Transaction_CurrencyCode">Currency</string>
    <string name="cashBackAmount">Cash Back</string>
    <string name="course_ID">Course ID:</string>
    <string name="Form_kind">Form kind:</string>
    <string name="INVOICENUMBER">INVOICE NUMBER:</string>
    <string name="meter_number">Meter Number</string>
    <string name="newPIN">New PIN</string>
    <string name="con_newPIN">Confirm New PIN</string>
    <string name="originalTranSystemTraceAuditNumber">Receipt Number</string>
    <string name="phone_number">Phone Number:</string>
    <string name="seat_number">Seat Number:</string>
    <string name="Student_number">Student Number:</string>
    <string name="serviceId">Service:</string>
    <string name="operator">Operator:</string>
    <string name="student_name">Student Name:</string>
    <string name="toCard">To Card:</string>
    <string name="voucherNumber">Voucher Number:</string>
    <string name="bank_code">Bank Code:</string>
    <string name="toaccount">To Account Number:</string>
    <string name="Transaction_amount_error">Invalid Transaction Amount</string>
    <string name="cashBackAmount_error">Invalid Cash Back</string>
    <string name="INVOICENUMBER_error">Invalid Invoice Number</string>
    <string name="meter_number_error">Invalid Meter Number(04XXXXXXXXXX)</string>
    <string name="toaccount_error">Invalid Account Number</string>
    <string name="Declarant_error">Invalid Declarant Number</string>
    <string name="newPIN_error">Invalid New PIN</string>
    <string name="con_newPIN_error">PIN Mismatch</string>
    <string name="originalTranSystemTraceAuditNumber_error">Invalid Receipt Number</string>
    <string name="phone_number_error">Invalid Phone Number(0XXXXXXXXX)</string>
    <string name="mob_number_error">Invalid Phone Number(249XXXXXXXXX)</string>
    <string name="seat_number_error">Invalid Seat Number</string>
    <string name="serviceId_error">Invalid Service</string>
    <string name="student_name_error">Invalid Student Name</string>
    <string name="toCard_error">Invalid To Card</string>
    <string name="voucherNumber_error">Invalid Voucher Number</string>
    <string name="bank_code_error">Invalid Bank Code</string>
    <string name="Purchase">Purchase</string>
    <string name="Purchase_with_cash_back">Purchase with Cash Back</string>
    <string name="Purchase_Mobile">Purchase Mobile</string>
    <string name="Reversal">Reversal</string>
    <string name="Balance_Inquiry">Balance Inquiry</string>
    <string name="Mini_Statement">Mini Statement</string>
    <string name="Refund">Refund</string>
    <string name="Mobile_topUp">Mobile Top-up</string>
    <string name="Mobile_bill_payment">Mobile Bill Payment</string>
    <string name="electricity">Electricity (NEC)</string>
    <string name="mohe">Higher Education</string>
    <string name="mohe_arab">Higher Education Arab</string>
    <string name="e15">E15 Receipt:</string>
    <string name="Customs">Customs</string>
    <string name="Mobile_bill_inq">Mobile Bill Inquiry</string>
    <string name="electricity_inq">Electricity Bill Inquiry</string>
    <string name="mohe_inq">Higher Education Inquiry</string>
    <string name="mohe_arab_inq">Higher Education Arab Inquiry</string>
    <string name="e15_inq">E15 Receipt Inquiry</string>
    <string name="Customs_inq">Customs Inquiry</string>
    <string name="card_ransfer">Card Transfer</string>
    <string name="account_tranfer">Account Transfer</string>
    <string name="Cash_in">Money deposit</string>
    <string name="generate_voucher">Money Transfer</string>
    <string name="cash_out_voucher">Money Receive</string>
    <string name="cash_out_voucher_amount">Money Receive With Amount</string>
    <string name="pin_change">PIN Change</string>
    <string name="cash_in_voucher">Deposit Money Received</string>
    <string name="cash_out">Cash Out</string>
    <string name="yes">Yes</string>
    <string name="close">Close</string>
    <string name="Success">Success</string>
    <string name="w_print">Do you wish to Print Merchant Copy?</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>
    <string name="merchant_label_text">Merchant Password</string>
    <string name="magnetic_card_test">Magnetic Card</string>
    <string name="track1">Track1</string>
    <string name="track2">Track2</string>
    <string name="track3">Track3</string>
    <string name="read_card">Swipe Card</string>
    <string name="quit">quit</string>
    <string name="error_open_magnetic_card">Could not open magnetic card device</string>
    <string name="error">Error</string>
    <string name="title_activity_sacn_card">SacnCardActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Name">sdsdsd</string>
    <string name="re_pruches">********** Purchase *********</string>
    <string name="re_date">Time:</string>
    <string name="re_date_min">Date</string>
    <string name="re_time">Date:</string>
    <string name="re_merchant_name">Merchant ID:</string>
    <string name="re_termianlId">Terminal ID:</string>
    <string name="re_pan">Card Number:</string>
    <string name="re_to_pan">Card Number:</string>
    <string name="re_card_holderName">Card Holder Name:</string>
    <string name="re_exp_date">ExpiryDate:</string>
    <string name="re_success">APPROVED</string>
    <string name="re_approval_code">Voucher Number:</string>
    <string name="re_failed">Failed Transaction</string>
    <string name="re_balance">Current Balance:</string>
    <string name="re_operationCode">Operation Code:</string>
    <string name="paid_amount">Paid Amount:</string>
    <string name="re_failed_code">Response Code:</string>
    <string name="re_sub_balance">Current Phone Balance:</string>
    <string name="re_failed_message">Failed Message:</string>
    <string name="re_sign">Customer Signature: ………………….</string>
    <string name="re_tran_id">Transaction ID:</string>
    <string name="re_re_num">Receipt No:</string>
    <string name="re_tran_amount">Amount:</string>
    <string name="re_tran_amount_min">Amount</string>
    <string name="re_tran_fee">Tran Fee:</string>
    <string name="re_ref_num">Reference No:</string>
    <string name="re_auth_code">AUTH No:</string>
    <string name="re_clients">Customer Copy</string>
    <string name="re_merchant">Merchant Copy</string>
    <string name="TotalBill">Total Bill:</string>
    <string name="BilledAmount">Billed Amount:</string>
    <string name="LastInvoiceDate">Last Invoice Date:</string>
    <string name="ContractNumber">Contract Number:</string>
    <string name="UnbilledAmount">Unbilled Amount:</string>
    <string name="ReferenceId">Reference ID:</string>
    <string name="UnitName">Unit Name:</string>
    <string name="ServiceName">Service Name:</string>
    <string name="PayerName">Citizen  Name:</string>
    <string name="TotalAmount">Total Amount:</string>
    <string name="DueAmount">Due Amount:</string>
    <string name="InvoiceExpiry">Expiry date:</string>
    <string name="InvoiceStatus">Invoice Status:</string>
    <string name="BankCode">Bank Code:</string>
    <string name="Amount">Amount:</string>
    <string name="DeclarantNAME">Declarant NAME:</string>
    <string name="InstanceID">InstanceID:</string>
    <string name="ProcStatus">ProcStatus:</string>
    <string name="ProcError">ProcError:</string>
    <string name="Office">Office:</string>
    <string name="Declarant">Declarant Number:</string>
    <string name="DECNBER">DECNBER:</string>
    <string name="Transaction">Transaction:</string>
    <string name="Year">Year</string>
    <string name="DECSER">DECSER</string>
    <string name="Dec.No">Dec.No:</string>
    <string name="SalesAmount">Sales Amount:</string>
    <string name="FixedFee">Fixed Fee:</string>
    <string name="Token">Token:</string>
    <string name="MeterNumber">MeterNumber:</string>
    <string name="Units">Units:</string>
    <string name="AccountNumber">Account Number:</string>
    <string name="ReceiptNumber">Receipt Number:</string>
    <string name="CustomerName">Customer Name:</string>
    <string name="receipt_number">Receipt Number:</string>
    <string name="cancel">Cancel</string>
    <string name="network_configration">Network Configration</string>
    <string name="merchant_configuration">Merchant Configuration</string>
    <string name="terminal_configuration">Terminal Configuration</string>
    <string name="change_merch_pass">Change Merchant Password</string>
    <string name="merchant_configuration_desc">Change merchant Configuration like Merchant Name , Merchant Address</string>
    <string name="Network_Confirgation_desc">Change Network Confirgation  like ip address and port number</string>
    <string name="terminal_configration_desc">Change Terminal Configration like Terminal id and clinet id</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="language">Language</string>
    <string name="print">Print</string>
    <string name="Update_Payee_List">Update Payee List</string>
    <string name="update_payee_list_desc">update payee list from EBS</string>
    <string name="pay_your_bill">Do you wish to Pay your bill?</string>
    <string name="reprinting">Reprinting..................</string>
</resources>