<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:iconTint="@color/Black"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_summery"
        android:orderInCategory="100"
        android:iconTint="@color/Black"
        android:title="@string/history"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_reprint"-->
        <!--android:orderInCategory="100"-->
        <!--android:iconTint="@color/Black"-->
        <!--android:title="@string/re_print"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_lang"
        android:orderInCategory="100"
        android:iconTint="@color/Black"
        android:title="@string/language"
        app:showAsAction="never" />
</menu>